# nuts

./: Cargo.toml  Makefile  README.md  go.mod  go.sum
cmd/cli/: main.go
cmd/collector/: main.go
cmd/service/: main.go
configs/: collector.yaml  service.yaml
deployments/: collector.yaml  service.yaml
docs/: 05_api_cli_contract.md  15_nri_v3_quickstart.md  16_advanced_rules_guide.md  NRI_V3_OPTIMIZATION.md  PROJECT_INTRO_AND_SCHEDULE.md  arch.md  database-design.md  database-implementation-summary.md  event.md  eventbus-plan.md  flow.md  framework.md  nri-cgroup.md  nri_grpc_adapter.md  nri_version_control.md  plan.md  plugin.md
example/rules/: test-policy.json  test-rule-invalid.yaml  test-rule-update.yaml  test-rule-valid.yaml
internal/api/: handler.go
internal/service/: service.go
pkg/aggregation/: aggregator.go  algorithms.go  interface.go
pkg/client/: collector.go
pkg/collector/: interface.go
pkg/datasource/: interface.go  nri.go
pkg/diagnostic/: interface.go
pkg/libdslgo/: README.md  ast_dot.go  errors.go  evaluator.go  functions.go  optimizer.go  parser.go  tracer.go  types.go
pkg/policy/: interface.go
pkg/policyengine/: engine.go
pkg/statemachine/: statemachine.go  statemachine_test.go
pkg/storage/: factory.go  interface.go
pkg/task/: store.go  task.go
scripts/: file.bt  io.bt  network.bt  perf.bt  process.bt
scripts/crictl/: CONTAINERD_VS_CRIUS_COMPARISON.md  README.md  STATIC_NETWORK_VERIFICATION.md  VERIFICATION_REPORT.md  container-config.json  pod-config.json  test-pause.json  test-pod.sh  test.sh
src/: cli.rs  config.rs  lib.rs  main.rs
src/ai/: async_bridge.rs  llm_client.rs  mod.rs
src/api/: condition.rs  diagnosis.rs  mod.rs  nri_v3_enhanced.rs  rule_management.rs  trigger.rs
src/collector/: block_io.rs  bpftrace_adapter.rs  cgroup_contention.rs  collector_client.rs  mod.rs  network.rs  nri_batch.rs  nri_grpc.rs  nri_mapping_v2.rs  nri_persist.rs  nri_socket.rs  nri_v3.rs  nri_v3_tests.rs  nri_version.rs
src/diagnosis/: ai_enhanced_engine.rs  (+7 more)
stringClass/: stringFilter.md
tests/: api_integration_test.rs
(+21 files in other folders)
