[package]
name = "nuts-observer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nuts-observer"
path = "src/main.rs"

[[bin]]
name = "nuts-observer-cli"
path = "src/bin/nuts_observer_cli.rs"

[[bin]]
name = "nuts-collector-daemon"
path = "src/bin/collector_daemon.rs"

[lib]
name = "nuts_observer"
path = "src/lib.rs"

[dependencies]
serde = { version = "=1.0.200", features = ["derive"] }
serde_json = "=1.0.120"
axum = "=0.7.5"
tokio = { version = "=1.40", features = ["rt-multi-thread", "macros", "fs", "process", "io-util", "signal"] }
sha2 = "=0.10.8"
uuid = { version = "=1.10", features = ["v4"] }
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["fmt", "env-filter"] }
chrono = { version = "=0.4.38", features = ["serde"] }
reqwest = { version = "=0.11.18", features = ["json"] }
serde_yaml = "=0.9.34"

# High-performance concurrent data structures
dashmap = "=5.5"
# moka disabled due to Rust 1.82 requirement, enable after upgrade to Rust 1.85+
# moka = { version = "=0.12", features = ["future"] }

# Embedded database for persistence
sled = "=0.34.7"

clap = { version = "=4.5.4", features = ["derive"] }
libc = "=0.2.155"
async-trait = "=0.1.80"

# gRPC dependencies for privilege separation (experimental)
tonic = { version = "0.12", features = ["tls"], optional = true }
prost = { version = "0.13", optional = true }
tokio-stream = { version = "0.1", features = ["net"], optional = true }
nix = { version = "0.29", features = ["socket", "process"] }
tower = { version = "0.4", features = ["util"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tower = { version = "=0.4.13", features = ["util"] }
axum = { version = "0.7", features = ["macros"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = ["nri-grpc"]
# Experimental gRPC support for standard NRI protocol
nri-grpc = ["tonic", "prost", "tokio-stream"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
